// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HighlightText /> should detect all ocurrencies of searched words in textToHighlight prop 1`] = `
<Text>
  I'm 
  <Text>
    Slim
  </Text>
   
  <Text>
    Shady
  </Text>
  , yes, I'm the real 
  <Text>
    Shady
  </Text>
  . All you other 
  <Text>
    Slim
  </Text>
   
  <Text>
    Shady
  </Text>
  s, are just imitating. So won't the real 
  <Text>
    Slim
  </Text>
   
  <Text>
    Shady
  </Text>
  , please stand up?
</Text>
`;

exports[`<HighlightText /> should render properly with custom components 1`] = `
<Text
  style={
    Object {
      "color": "#333",
    }
  }
>
  In this text we can do a 
  <Text
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    hello
  </Text>
   to the entire 
  <Text
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    world
  </Text>
</Text>
`;

exports[`<HighlightText /> should render properly with custom styles 1`] = `
<Text
  style={
    Object {
      "color": "darkgray",
    }
  }
>
  In this text we can do a 
  <Text
    style={
      Object {
        "color": "blue",
      }
    }
  >
    hello
  </Text>
   to the entire 
  <Text
    style={
      Object {
        "color": "blue",
      }
    }
  >
    world
  </Text>
</Text>
`;

exports[`<HighlightText /> should wrap each matched search word with an isolated element 1`] = `
<Text>
  In this text we can do a 
  <Text>
    hello
  </Text>
   to the entire 
  <Text>
    world
  </Text>
</Text>
`;
